# moka-news

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISTRIBUTION.md  LICENSE  LOGO_SETUP.md  PROMPTS_CUSTOMIZATION.md  README.md  RELEASE.md  download-logo.sh  example-keywords.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/: README.md
examples/: cli_providers_example.py  custom_feeds.py  demo.py  gemini_mistral_example.py  keywords_example.py  openai_example.py
moka_news/: __init__.py  config.py  constants.py  download_tracker.py  editorial.py  first_run_setup.py  logger.py  main.py  opml_manager.py  refresh_manager.py
moka_news/barista/: __init__.py
moka_news/cup/: __init__.py
moka_news/grinder/: __init__.py
tests/: test_barista.py  test_config.py  test_cup.py  test_download_tracker.py  test_editorial.py  test_first_run_setup.py  test_grinder.py  test_grinder_filtering.py  test_integration.py  test_opml_manager.py  test_prompts.py  test_refresh.py  test_refresh_manager.py
