[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moka-news"
version = "0.1.0"
description = "Morning Persona News - A TUI RSS news aggregator with AI summaries"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Gianluigi Calcaterra"}
]
keywords = ["rss", "news", "aggregator", "ai", "tui", "terminal", "openai", "anthropic", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
    "Topic :: Terminals",
    "Environment :: Console",
]
dependencies = [
    "feedparser>=6.0.10",
    "textual>=0.40.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/calca/moka-news"
Repository = "https://github.com/calca/moka-news"
Issues = "https://github.com/calca/moka-news/issues"
Changelog = "https://github.com/calca/moka-news/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
gemini = [
    "google-generativeai>=0.3.0",
]
mistral = [
    "mistralai>=0.0.7",
]
all = [
    "google-generativeai>=0.3.0",
    "mistralai>=0.0.7",
]

[project.scripts]
moka-news = "moka_news.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["moka_news*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
